--- a/code/LSTM.ipynb
+++ b/code/LSTM.ipynb
@@ -287,6 +287,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model parameters saved to /Users/curryyang/code/2024_MCM_C_UESTC/modle/set_predictor_model_LSTM_CA.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_path = '/Users/curryyang/code/2024_MCM_C_UESTC/modle/set_predictor_model_LSTM_CA.pth'\n",
+    "\n",
+    "# 保存模型的状态字典\n",
+    "torch.save(model.state_dict(), model_path)\n",
+    "\n",
+    "print(f'Model parameters saved to {model_path}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
